# cardiotensor

./: .codecov.yaml  .gitignore  .pre-commit-config.yaml  3D_orientation.py  3D_processing.py  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  orien.tif  parameters_19.19um_727_heart.txt  parameters_19.19um_PL19_heart.txt  parameters_317.6um_LADAF-2021-17_heart.txt  parameters_32.04um_LADAF-2021-17_heart.txt  parameters_38.38um_PL19_heart.txt  parameters_76.76um_PL19_heart.txt  parameters_79.4um_LADAF-2021-17_heart.txt  parameters_79.4um_LADAF-2021-17_heart_cropped.txt  parameters_8.01um_LADAF-2021-17_heart.txt  parameters_9.595um_727_heart.txt  parameters_Y_heart.txt  parameters_Y_heart_inverse.txt  processing.py  pyproject.toml  save_parameter.txt  sitemap.xml  slurm_launcher.py  utilsST_3D.py  utilsST_3D_2.py
.github/workflows/: ci.yml  coverage.yml  coverage_codecov.yml  draft-pdf.yml  lint.yml  nox-ci.yml  tests.yml
citing/: index.html
contributing/: index.html
docs/: citing.md  index.md  installation.md  quickstart.md
docs/getting-started/: examples.md
docs/getting-technical/: angles.md  conventions.md  index.md  structure_tensor.md  tractography.md
docs/javascripts/: extra.js
docs/reference/: cli.md  configuration.md
docs/stylesheets/: extra.css
examples/: README.md  parameters_example.conf
examples/data/635.2um_LADAF-2021-17_heart_overview_/: 635.2um_LADAF-2021-17_heart_overview_0000.tif  635.2um_LADAF-2021-17_heart_overview_0001.tif  635.2um_LADAF-2021-17_heart_overview_0002.tif  635.2um_LADAF-2021-17_heart_overview_0003.tif  635.2um_LADAF-2021-17_heart_overview_0004.tif  635.2um_LADAF-2021-17_heart_overview_0005.tif  635.2um_LADAF-2021-17_heart_overview_0006.tif  635.2um_LADAF-2021-17_heart_overview_0007.tif  635.2um_LADAF-2021-17_heart_overview_0008.tif  635.2um_LADAF-2021-17_heart_overview_0009.tif  635.2um_LADAF-2021-17_heart_overview_0010.tif  635.2um_LADAF-2021-17_heart_overview_0011.tif  635.2um_LADAF-2021-17_heart_overview_0012.tif  635.2um_LADAF-2021-17_heart_overview_0013.tif  635.2um_LADAF-2021-17_heart_overview_0014.tif  635.2um_LADAF-2021-17_heart_overview_0015.tif  635.2um_LADAF-2021-17_heart_overview_0016.tif  635.2um_LADAF-2021-17_heart_overview_0017.tif  635.2um_LADAF-2021-17_heart_overview_0018.tif  635.2um_LADAF-2021-17_heart_overview_0019.tif  635.2um_LADAF-2021-17_heart_overview_0020.tif  635.2um_LADAF-2021-17_heart_overview_0021.tif  635.2um_LADAF-2021-17_heart_overview_0022.tif  635.2um_LADAF-2021-17_heart_overview_0023.tif  635.2um_LADAF-2021-17_heart_overview_0024.tif  635.2um_LADAF-2021-17_heart_overview_0025.tif  635.2um_LADAF-2021-17_heart_overview_0026.tif  635.2um_LADAF-2021-17_heart_overview_0027.tif  635.2um_LADAF-2021-17_heart_overview_0028.tif  635.2um_LADAF-2021-17_heart_overview_0029.tif  635.2um_LADAF-2021-17_heart_overview_0030.tif  635.2um_LADAF-2021-17_heart_overview_0031.tif  635.2um_LADAF-2021-17_heart_overview_0032.tif  635.2um_LADAF-2021-17_heart_overview_0033.tif  635.2um_LADAF-2021-17_heart_overview_0034.tif  635.2um_LADAF-2021-17_heart_overview_0035.tif  635.2um_LADAF-2021-17_heart_overview_0036.tif  635.2um_LADAF-2021-17_heart_overview_0037.tif  635.2um_LADAF-2021-17_heart_overview_0038.tif  635.2um_LADAF-2021-17_heart_overview_0039.tif  (+195 more)
examples/data/mask/: binary_000000.tif  binary_000001.tif  binary_000002.tif  binary_000003.tif  binary_000004.tif  binary_000005.tif  binary_000006.tif  binary_000007.tif  binary_000008.tif  binary_000009.tif  binary_000010.tif  binary_000011.tif  binary_000012.tif  binary_000013.tif  binary_000014.tif  binary_000015.tif  binary_000016.tif  binary_000017.tif  binary_000018.tif  binary_000019.tif  binary_000020.tif  binary_000021.tif  binary_000022.tif  binary_000023.tif  binary_000024.tif  binary_000025.tif  binary_000026.tif  binary_000027.tif  binary_000028.tif  binary_000029.tif  binary_000030.tif  binary_000031.tif  binary_000032.tif  binary_000033.tif  binary_000034.tif  binary_000035.tif  binary_000036.tif  binary_000037.tif  binary_000038.tif  binary_000039.tif  (+186 more)
getting-started/: index.html
getting-started/examples/: index.html
getting-started/first-steps/: index.html
getting-started/installation/: index.html
getting-technical/: index.html
getting-technical/angles/: index.html
getting-technical/conventions/: index.html
getting-technical/fractional_anisotropy/: index.html
getting-technical/structure_tensor/: index.html
getting-technical/tractography/: index.html
old/: processing_spine.py
paper/: paper.bib  paper.md
param_files/: param_template.txt  parameters_template.conf
reference/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/configuration/: index.html
search/: search_index.json
src/MyoTensor/: __init__.py  analyse_functions.py  analysis_functions.py  gui.py  processing_heart.py  utils.py
src/cardiac_fiber_tensor/: __init__.py  processing_heart.py  slurm_launcher.py  utils.py
src/cardiotensor/analysis/: __init__.py  analysis_functions.py  analysis_gui.py  gui_analysis_tool.py
src/cardiotensor/export/: __init__.py  amira_writer.py  export_to_amira.py  vtk_writer.py
src/cardiotensor/launcher/: __init__.py  slurm_launcher.py
src/cardiotensor/orientation/: __init__.py  compute_orientation.py  orientation_computation_functions.py  orientation_computation_pipeline.py  processing_functions.py
src/cardiotensor/scripts/: amira_writer.py  analysis_gui.py  analysis_histograms.py  analysis_streamlines.py  compute_orientation.py  convert_trk_to_am.py  export_to_amira.py  export_to_vtk.py  generate_streamlines.py  gui_analysis_tool.py  slurm_launcher.py  visualize_streamlines.py  visualize_vector_field.py  vtk_writer.py
src/cardiotensor/tractography/: generate_streamlines.py  visualize_streamlines.py
src/cardiotensor/utils/: DataReader.py  am_utils.py  downsampling.py  plot_vector_field.py  utils.py  (+2 more)
tests/: test_DataReader.py  test_amira_writer.py  test_analyse_functions.py  test_downsampling.py  test_orientation_computation_functions.py  test_utils.py
(+4 files in other folders)
