[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "j.brunet@ucl.ac.uk", name = "Joseph Brunet"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Typing :: Typed",
]
dependencies = [
    "PyQt5",
    "SimpleITK",
    "cupy-cuda12x",
    "dask",
    "dask-image",
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "pillow",
    "scikit-image",
    "structure-tensor>=0.3.0",
    "tifffile",
]
description = "Toolkit designed for quantifying 3D cardiomyocytes orientations in heart images"
keywords = []
license = {file = "LICENSE.md"}
name = "cardiotensor"
readme = "README.md"
requires-python = ">=3.11"
version = "1.0.0"

[project.optional-dependencies]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.scripts]
cardio-amira = "cardiotensor.scripts.amira_writer:script"
cardio-analyse = "cardiotensor.scripts.analysis_gui:script"
cardio-tensor = "cardiotensor.scripts.compute_orientation:script"
cardio-tensor-slurm = "cardiotensor.scripts.slurm_launcher:script"
cardio-vtk = "cardiotensor.scripts.vtk_writer:script"

[project.urls]
homepage = "https://github.com/JosephBrunet/cardiotensor"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "glymur.*"

[tool.pytest.ini_options]
addopts = "--cov=cardiotensor --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
lint.select = ["F", "I", "UP"]
lint.mccabe.max-complexity = 10
lint.pep8-naming.classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false
