[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "j.brunet@ucl.ac.uk", name = "Joseph Brunet"},
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
dependencies = [
    "PyQt5",
    "SimpleITK",
    "alive_progress",
    "dask",
    "glymur",
    "matplotlib",
    "numpy>=1.20",
    "opencv-python-headless",
    "scikit-image",
    "structure-tensor>=0.3.0",
    "tifffile",
    'pandas',
]
description = "Toolkit designed for quantifying and visualising 3D cardiomyocytes orientations in heart images"
keywords = []
license = {file = "LICENSE.md"}
name = "cardiotensor"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.0"

[project.optional-dependencies]
cupy = ["cupy>=8"]
dev = [
    "black",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]
git = [
    "mkdocs-git-committers-plugin-2>=1.1,<3",
    "mkdocs-git-revision-date-localized-plugin~=1.2,>=1.2.4",
]

[project.scripts]
cardio-amira = "cardiotensor.scripts.amira_writer:script"
cardio-analyse = "cardiotensor.scripts.gui_analysis_tool:script"
cardio-tensor = "cardiotensor.scripts.compute_orientation:script"
cardio-tensor-slurm = "cardiotensor.scripts.slurm_launcher:script"
cardio-vtk = "cardiotensor.scripts.vtk_writer:script"

[project.urls]
Documentation = "https://github.com/JosephBrunet/cardiotensor"
Issues = "https://github.com/JosephBrunet/cardiotensor/issues"
Source = "https://JosephBrunet.github.io//cardiotensor"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "glymur.*"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
lint.select = ["F", "I", "UP"]
lint.mccabe.max-complexity = 10
lint.pep8-naming.classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false





[tool.coverage.run]
branch = true
relative_files = true

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.coverage.html]
directory = "coverage_html_report"